[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["famazak <zakfama58@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"
sqlmodel = "^0.0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
